--- a/app/assets/stylesheets/components/home/join_pool_form.scss
+++ b/app/assets/stylesheets/components/home/join_pool_form.scss
@@ -1,3 +1,20 @@
+// .join-form {
+//   div:nth-child(2) {
+//     margin-bottom: 20px;
+//   }
+// }
+
+
+// .join-form-button {
+//   height: 30px;
+//   margin-top: 5px;
+//   margin-left: auto;
+//   width: 100px;
+//   margin-bottom: 1px;
+//   font-size: 12px;
+//   line-height: 12px;
+// }
+
 .join-form {
   div:nth-child(2) {
     margin-bottom: 20px;
@@ -14,4 +31,3 @@
   font-size: 12px;
   line-height: 12px;
 }
-
