--- a/app/assets/stylesheets/components/common/_.scss
+++ b/app/assets/stylesheets/components/common/_.scss
@@ -1,3 +1,66 @@
+// @import "standings_box";
+// @import "pool_standings_box";
+// @import "authform";
+// @import "alerts";
+// @import "button";
+
+// .base-wrapper {
+//   min-height: 100vh;
+//   padding-left: 2.5%;
+//   padding-right: 2.5%;
+//   display: flex;
+//   justify-content: center;
+//   background: white;
+// }
+
+// .base-container {
+//   min-height: 100%;
+//   width: 100%;
+//   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: space-between;
+//   align-items: center;
+//   background: white;
+// }
+
+// .app-container {
+//   position: relative;
+//   width: 100%;
+//   height: 100%;
+//   min-width: 1360px;
+//   // min-height: 950px;
+//   padding-top: 60px;
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: center;
+//   align-items: center;
+//   overflow-y: overlay;
+//   font-family: 'Open Sans', sans-serif;
+//   // background: white;
+//   background: #E9EBEE;
+// }
+
+// .hidden {
+//   display: none !important;
+// }
+
+// #dropdown-cover{
+//   position: absolute;
+//   height: 100vh;
+//   width: 100vw;
+//   background: rgba(0, 0, 0, 0.5);
+//   z-index: 10;
+// }
+
+// .submit-row {
+//   width: 100%;
+//   padding-left: 5px;
+//   display: flex;
+//   justify-content: space-between;
+//   position: relative;
+// }
+
 @import "standings_box";
 @import "pool_standings_box";
 @import "authform";
@@ -8,19 +71,33 @@
   min-height: 100vh;
   padding-left: 2.5%;
   padding-right: 2.5%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   background: white;
 }
 
 .base-container {
   min-height: 100%;
   width: 100%;
-  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  -webkit-box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+          box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   background: white;
 }
 
@@ -31,10 +108,19 @@
   min-width: 1360px;
   // min-height: 950px;
   padding-top: 60px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   overflow-y: overlay;
   font-family: 'Open Sans', sans-serif;
   // background: white;
@@ -56,7 +142,11 @@
 .submit-row {
   width: 100%;
   padding-left: 5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   position: relative;
 }
