--- a/app/assets/stylesheets/components/common/authform.scss
+++ b/app/assets/stylesheets/components/common/authform.scss
@@ -1,17 +1,174 @@
+// .signup-container {
+//   height: 100%;
+//   width: 100%;
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+
+//   .auth-form {
+//     width: 400px;
+//     font-size: 20px;
+//     margin-bottom: 15px;
+//     display: flex;
+//     flex-direction: column;
+//     align-items: flex-end;
+//     .auth-form-name,
+//     .auth-form-password {
+//       width: 100%;
+//       padding: 5px;
+//       border-bottom: .2px rgba(51, 51, 51, .2) solid;
+//     }
+//     .submit-row {
+//       width: 100%;
+//       padding-left: 5px;
+//       display: flex;
+//       justify-content: space-between;
+//       position: relative;
+//     }
+//     .utility-row {
+//       font-size: 12px;
+//       align-self: flex-start;
+//       padding-left: 5px;
+//       display: flex;
+//       flex-direction: column;
+//       .utility-item {
+//         margin-top: 10px;
+//       }
+//     }
+//     .reroute {
+//       font-size: 12px;
+//       display: flex;
+//       align-items: center;
+//       span {
+//         margin-left: 3px;
+//         text-decoration: underline;
+//       }
+//       span:hover {
+//         color: #AF1E2C;
+//       }
+//     }
+//     .auth-form-button {
+//       height: 30px;
+//       width: 90px;
+//       font-size: 15px;
+//     }
+//   }
+// }
+
+// .authform-group {
+//   position: relative;
+//   margin-bottom: 45px;
+//   width: 100%;
+
+//   input {
+//     font-size: 18px;
+//     padding: 10px 10px 10px 5px;
+//     display: block;
+//     width: 100%;
+//     border: none;
+//     border-bottom: 1px solid #757575;
+
+//     &:focus {
+//       outline: none;
+//     }
+//   }
+
+//   label {
+//     color: #999;
+//     font-size: 20px;
+//     font-weight: normal;
+//     position: absolute;
+//     pointer-events: none;
+//     left: 5px;
+//     top: 8px;
+//     transition: 0.2s ease all;
+//   }
+
+//   input:focus~label,
+//   input:valid~label {
+//     top: -20px;
+//     font-size: 14px;
+//     color: #5264AE;
+//   }
+
+//   .bar {
+//     position: relative;
+//     display: block;
+//     width: 100%;
+//   }
+
+//   .bar:before, .bar:after {
+//     content: '';
+//     height: 2px;
+//     width: 0;
+//     bottom: 1px;
+//     position: absolute;
+//     background: #5264AE;
+//     transition: 0.2s ease all;
+//   }
+
+//   .bar:before {
+//     left: 50%;
+//   }
+
+//   .bar:after {
+//     right: 50%;
+//   }
+
+//   input:focus~.bar:before, input:focus~.bar:after {
+//     width: 50%;
+//   }
+// }
+
+// .form-has-error {
+//   position: relative;
+
+//   > input {
+//     border-bottom: 2px solid $best-red !important;
+//     z-index: 10;
+//   }
+
+//   .form-group-error-message {
+//     position: absolute;
+//     left: 0;
+//     bottom: -28px;
+//     display: inline-block;
+//     font-size: 13px;
+//     background: $best-red;
+//     padding: 5px;
+//     color: white;
+//     border-bottom-right-radius: 5px;
+//     border-bottom-left-radius: 5px;
+//   }
+// }
+
 .signup-container {
   height: 100%;
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 
   .auth-form {
     width: 400px;
     font-size: 20px;
     margin-bottom: 15px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    align-items: flex-end;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
     .auth-form-name,
     .auth-form-password {
       width: 100%;
@@ -21,24 +178,38 @@
     .submit-row {
       width: 100%;
       padding-left: 5px;
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
-      justify-content: space-between;
+      -webkit-box-pack: justify;
+          -ms-flex-pack: justify;
+              justify-content: space-between;
       position: relative;
     }
     .utility-row {
       font-size: 12px;
-      align-self: flex-start;
+      -ms-flex-item-align: start;
+          align-self: flex-start;
       padding-left: 5px;
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
-      flex-direction: column;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column;
       .utility-item {
         margin-top: 10px;
       }
     }
     .reroute {
       font-size: 12px;
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
-      align-items: center;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
       span {
         margin-left: 3px;
         text-decoration: underline;
@@ -81,6 +252,8 @@
     pointer-events: none;
     left: 5px;
     top: 8px;
+    -webkit-transition: 0.2s ease all;
+    -o-transition: 0.2s ease all;
     transition: 0.2s ease all;
   }
 
@@ -104,6 +277,8 @@
     bottom: 1px;
     position: absolute;
     background: #5264AE;
+    -webkit-transition: 0.2s ease all;
+    -o-transition: 0.2s ease all;
     transition: 0.2s ease all;
   }
 
@@ -141,4 +316,3 @@
     border-bottom-left-radius: 5px;
   }
 }
-
