--- a/app/assets/stylesheets/components/console/_.scss
+++ b/app/assets/stylesheets/components/console/_.scss
@@ -1,14 +1,95 @@
+// @import 'game_item.scss';
+// @import 'game_form.scss';
+
+// .console-container {
+//   display: flex;
+//   flex-direction: column;
+//   font-size: 20px;
+
+//   .game-list {
+//     display: flex;
+//     flex-direction: column;
+//   }
+
+//   .console-header {
+//     padding-left: 15px;
+//     font-weight: bold;
+//     font-size: 25px;
+//     position: relative;
+//     display: flex;
+//     justify-content: space-between;
+
+//     i {
+//       transition: .1s;
+//       cursor: pointer;
+//     }
+
+//     i:hover {
+//       opacity: .5;
+//     }
+
+//     .fa-caret-left {
+//       padding-right: 5px;
+//       position: absolute;
+//       left: 0px;
+//       bottom: 7px;
+//     }
+
+//     .fa-caret-right {
+//       padding-left: 5px;
+//     }
+
+//     button {
+//       font-size: 20px;
+//       background: $drk-primary;
+//       color: white;
+//       padding: 0px 10px;
+//       height: 37px;
+//     }
+
+//     button:hover {
+//       background: white;
+//       color: black;
+//       border: .5px $drk-primary solid;
+//     }
+//   }
+
+//   .console-labels {
+//     display: flex;
+//     flex-direction: row;
+//     font-weight: bold;
+//     padding: 10px 0px;
+//     margin: 10px 0px;
+//     color: white;
+//     background: $drk-primary;
+//     div {
+//       width: 125px;
+//       text-align: center;
+//     }
+//   }
+// }
+
 @import 'game_item.scss';
 @import 'game_form.scss';
 
 .console-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   font-size: 20px;
 
   .game-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
 
   .console-header {
@@ -16,10 +97,16 @@
     font-weight: bold;
     font-size: 25px;
     position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
 
     i {
+      -webkit-transition: .1s;
+      -o-transition: .1s;
       transition: .1s;
       cursor: pointer;
     }
@@ -55,8 +142,13 @@
   }
 
   .console-labels {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
     font-weight: bold;
     padding: 10px 0px;
     margin: 10px 0px;
