--- a/app/assets/stylesheets/components/console/game_form.scss
+++ b/app/assets/stylesheets/components/console/game_form.scss
@@ -1,40 +1,98 @@
+// .game-form-container {
+
+//   .game-form {
+//     width: 600px;
+//     display: flex;
+//     flex-direction: column;
+
+//   }
+//   .game-form-header {
+//     display: flex;
+//     justify-content: center;
+//     font-size: 20px;
+//     font-weight: bold;
+//     opacity: .5;
+//     padding-bottom: 20px;
+//   }
+
+//   .game-update-button {
+//     width: 90px;
+//     height: 30px;
+//     font-size: 15px;
+//     margin-left: auto;
+//     margin-top: 20px;
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//     border-radius: 3px;
+//     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+//     transition: .2s;
+//     background: $drk-primary;
+//     color: white;
+//   }
+
+//   .game-update-button:hover {
+//     color: $lt-primary;
+//     border: 1px black solid;
+//     background: white;
+//   }
+// }
+
 .game-form-container {
-
-  .game-form {
-    width: 600px;
-    display: flex;
-    flex-direction: column;
-
+  
+    .game-form {
+      width: 600px;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column;
+  
+    }
+    .game-form-header {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      font-size: 20px;
+      font-weight: bold;
+      opacity: .5;
+      padding-bottom: 20px;
+    }
+  
+    .game-update-button {
+      width: 90px;
+      height: 30px;
+      font-size: 15px;
+      margin-left: auto;
+      margin-top: 20px;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      border-radius: 3px;
+      -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+              box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+      -webkit-transition: .2s;
+      -o-transition: .2s;
+      transition: .2s;
+      background: $drk-primary;
+      color: white;
+    }
+  
+    .game-update-button:hover {
+      color: $lt-primary;
+      border: 1px black solid;
+      background: white;
+    }
   }
-  .game-form-header {
-    display: flex;
-    justify-content: center;
-    font-size: 20px;
-    font-weight: bold;
-    opacity: .5;
-    padding-bottom: 20px;
-  }
-
-  .game-update-button {
-    width: 90px;
-    height: 30px;
-    font-size: 15px;
-    margin-left: auto;
-    margin-top: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 3px;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-    transition: .2s;
-    background: $drk-primary;
-    color: white;
-  }
-
-  .game-update-button:hover {
-    color: $lt-primary;
-    border: 1px black solid;
-    background: white;
-  }
-}
-
+  
