--- a/app/assets/stylesheets/components/console/game_item.scss
+++ b/app/assets/stylesheets/components/console/game_item.scss
@@ -1,6 +1,34 @@
+// .game-item {
+//   display: flex;
+//   flex-direction: row;
+//   padding: 5px 0px;
+//   cursor: pointer;
+
+//   div {
+//     width: 125px;
+//     text-align: center;
+//   }
+//   div:first-child {
+//     font-weight: bold;
+//   }
+//   div:nth-child(3) {
+//     font-weight: bold;
+//   }
+// }
+
+// .game-item:hover {
+//   background: $drk-primary;
+//   color: white;
+// }
+
 .game-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
   padding: 5px 0px;
   cursor: pointer;
 
