--- a/app/assets/stylesheets/components/home/confirm_form.scss
+++ b/app/assets/stylesheets/components/home/confirm_form.scss
@@ -1,15 +1,69 @@
+// .confirm-form {
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   flex-direction: column;
+//   .confirm-header {
+//     font-weight: bold;
+//     margin-bottom: 10px;
+//   }
+//   .confirm-buttons {
+//     display: flex;
+//     flex-direction: row;
+//   }
+//   button {
+//     z-index: 1000;
+//     height: 30px;
+//     margin-top: 5px;
+//     width: 100px;
+//     margin-bottom: 1px;
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//     font-size: 12px;
+//     line-height: 12px;
+//     border-radius: 2px;
+//     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+//     background: $lt-primary;
+//     transition: .2s;
+//     color: white;
+//   }
+//   button:hover {
+//     background: white;
+//     color: $lt-primary; 
+//     border: 1px black solid;
+//   }
+//   .confirm-button {
+//     margin-right: 20px;
+//   }
+// }
+
 .confirm-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   .confirm-header {
     font-weight: bold;
     margin-bottom: 10px;
   }
   .confirm-buttons {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
   }
   button {
     z-index: 1000;
@@ -17,14 +71,23 @@
     margin-top: 5px;
     width: 100px;
     margin-bottom: 1px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     font-size: 12px;
     line-height: 12px;
     border-radius: 2px;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+            box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     background: $lt-primary;
+    -webkit-transition: .2s;
+    -o-transition: .2s;
     transition: .2s;
     color: white;
   }
