--- a/app/assets/stylesheets/components/home/mod_board.scss
+++ b/app/assets/stylesheets/components/home/mod_board.scss
@@ -1,3 +1,54 @@
+// .modboard-box {
+//   width: 870px;
+//   padding: 0px 5px;
+//   padding-top: 30px;
+//   position: relative;
+//   background: $drk-primary;
+//   color: white;
+//   overflow-y: hidden;
+
+//   h2 {
+//     position: absolute;
+//     top: 0px;
+//     font-size: 20px;
+//     text-align: left;
+//     font-weight: bold;
+//   }
+
+//   .modboard-container {
+//     width: 100%;
+//     // height: 267px;
+//     padding: 10px 0px;
+//     display: flex;
+//     flex-direction: column;
+//     // justify-content: space-around;
+//     overflow-y: hidden;
+
+//     .welcome {
+//       font-size: 20px;
+//       font-weight: bold;
+//     }
+
+//     .modboard-item {
+//       margin-bottom: 20px;
+//       padding-left: 5px;
+//       display: flex;
+//       flex-direction: column;
+//       align-items: flex-start;
+
+//       .title {
+//         font-size: 12.5px;
+//         font-weight: bold;
+//         margin-bottom: 5px;
+//       }
+
+//       .message {
+//         font-size: 15px;
+//         // font-weight: bold;
+//       }
+//     }
+//   }
+// }
 .modboard-box {
   width: 870px;
   padding: 0px 5px;
@@ -19,8 +70,13 @@
     width: 100%;
     // height: 267px;
     padding: 10px 0px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     // justify-content: space-around;
     overflow-y: hidden;
 
@@ -32,9 +88,16 @@
     .modboard-item {
       margin-bottom: 20px;
       padding-left: 5px;
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
-      flex-direction: column;
-      align-items: flex-start;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column;
+      -webkit-box-align: start;
+          -ms-flex-align: start;
+              align-items: flex-start;
 
       .title {
         font-size: 12.5px;
