--- a/app/assets/stylesheets/components/picks/pick_form.scss
+++ b/app/assets/stylesheets/components/picks/pick_form.scss
@@ -1,11 +1,157 @@
+  // .selection-item {
+  //   width: 100%;
+  //   margin-bottom: 10px;
+  //   display: flex;
+  //   flex-direction: row;
+  //   justify-content: space-between;
+  //   flex: 0 0 auto;
+  //   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  //   background: $drk-primary;
+  //   color: white;
+
+  //   div[class^='logo-'] {
+  //     height: 90px !important;
+  //     width: 80px;
+  //   }
+
+  //   label {
+  //     height: 90px;
+  //     width: 250px;
+  //     border-radius: 5px;
+  //     display: flex;
+  //     cursor: pointer;
+  //     transition: .3s ease-in-out;
+  //     font-size: 20px;
+  //     overflow: hidden;
+
+  //     .pick-button {
+  //       position: relative;
+  //       display: inline-block;
+  //       transition: all 0.3s ease-in-out;
+  //       cursor: pointer;
+  //     }
+
+  //     .pick-home-button, .pick-away-button{
+  //       border-radius: 0px;
+  //     }
+
+  //     .pick-button::after {
+  //       content: '';
+  //       position: absolute;
+  //       z-index: -1;
+  //       width: 100%;
+  //       height: 100%;
+  //       opacity: 0;
+  //       transition: opacity 0.3s ease-in-out;
+  //     }
+
+  //     .pick-button::after {
+  //       opacity: 1;
+  //     }
+
+  //     .selection-form-home-name, .selection-form-away-name {
+  //       height: 88px;
+  //       margin: 0 auto;
+  //       display: flex;
+  //       justify-content: center;
+  //       align-items: center;
+  //       flex-direction: column;
+  //       div:first-child {
+  //         font-weight: bold;
+  //       }
+  //     }
+  //   }
+
+  //   label:first-child {
+  //     border-top-left-radius: 0px;
+  //     border-bottom-left-radius: 0px; 
+  //   }
+
+  //   label:hover {
+  //     .pick-button {
+  //       transform: scale(1.15,1.15);
+  //     }
+  //     background: -webkit-gradient(linear, center bottom, center top, from(#F0EDE9), to(#FEFEFE));
+  //     color: $drk-primary;
+  //     border: .5px $drk-primary solid;
+  //     border-left: none;
+  //     border-right: none;
+  //   }
+
+  //   .selection-form-spread, .selection-form-date, .selection-form-time, .selection-form-line, .selection-form-score {
+  //     height: 88px;
+  //     width: 92.5px;
+  //     border-right: .2px rgba(51, 51, 51,.2) solid;
+  //     display: flex;
+  //     justify-content: center;
+  //     align-items: center;
+  //     font-size: 20px;
+  //   }
+
+  //   .selection-form-time {
+  //     font-size: 20px;
+  //     display: flex;
+  //     flex-direction: column;
+
+  //     .time-row {
+  //       display: flex;
+  //       justify-content: center;
+  //       align-items: center;
+  //       flex-direction: row;
+  //     }
+
+  //     .time-props {
+  //       padding-left: 3px;  
+  //       font-size: 10px;
+  //       display: flex;
+  //       flex-direction: column;
+  //       justify-content: center;
+  //       align-items: center;
+  //       div {
+  //         line-height: 10px;
+  //       }
+  //     }
+  //   }
+  // }
+
+  // .selected-button, .correct-pick-button, .incorrect-pick-button {
+  //   background: -webkit-gradient(linear, center bottom, center top, from(#F0EDE9), to(#FEFEFE));
+  //   color: $drk-primary;
+  //   border: .5px $drk-primary solid;
+  //   border-right: none;
+  //   border-left: none;
+  // }
+
+  // .selected-button {
+  //   color: $drk-primary;
+  // }
+
+  // .correct-pick-button {
+  //   color: $green;
+  // }
+
+  // .incorrect-pick-button {
+  //   color: #A71D31;
+  // }
+
   .selection-item {
     width: 100%;
     margin-bottom: 10px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    flex: 0 0 auto;
-    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 auto;
+            flex: 0 0 auto;
+    -webkit-box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+            box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
     background: $drk-primary;
     color: white;
 
@@ -18,8 +164,12 @@
       height: 90px;
       width: 250px;
       border-radius: 5px;
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
       cursor: pointer;
+      -webkit-transition: .3s ease-in-out;
+      -o-transition: .3s ease-in-out;
       transition: .3s ease-in-out;
       font-size: 20px;
       overflow: hidden;
@@ -27,6 +177,8 @@
       .pick-button {
         position: relative;
         display: inline-block;
+        -webkit-transition: all 0.3s ease-in-out;
+        -o-transition: all 0.3s ease-in-out;
         transition: all 0.3s ease-in-out;
         cursor: pointer;
       }
@@ -42,6 +194,8 @@
         width: 100%;
         height: 100%;
         opacity: 0;
+        -webkit-transition: opacity 0.3s ease-in-out;
+        -o-transition: opacity 0.3s ease-in-out;
         transition: opacity 0.3s ease-in-out;
       }
 
@@ -52,10 +206,19 @@
       .selection-form-home-name, .selection-form-away-name {
         height: 88px;
         margin: 0 auto;
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
         div:first-child {
           font-weight: bold;
         }
@@ -69,7 +232,9 @@
 
     label:hover {
       .pick-button {
-        transform: scale(1.15,1.15);
+        -webkit-transform: scale(1.15,1.15);
+            -ms-transform: scale(1.15,1.15);
+                transform: scale(1.15,1.15);
       }
       background: -webkit-gradient(linear, center bottom, center top, from(#F0EDE9), to(#FEFEFE));
       color: $drk-primary;
@@ -82,31 +247,60 @@
       height: 88px;
       width: 92.5px;
       border-right: .2px rgba(51, 51, 51,.2) solid;
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
-      justify-content: center;
-      align-items: center;
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
       font-size: 20px;
     }
 
     .selection-form-time {
       font-size: 20px;
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
-      flex-direction: column;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column;
 
       .time-row {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: row;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: row;
+                flex-direction: row;
       }
 
       .time-props {
         padding-left: 3px;  
         font-size: 10px;
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
         div {
           line-height: 10px;
         }
