--- a/app/assets/stylesheets/components/profile/_.scss
+++ b/app/assets/stylesheets/components/profile/_.scss
@@ -1,3 +1,18 @@
+// .profile-container {
+//   width: 400px;
+//   .auth-form-button {
+//     height: 30px;
+//     width: 90px;
+//     margin-left: auto;
+//   }
+//   .poolform-group {
+//     margin-bottom: 10px;
+//   }
+//   .auth-form {
+//     margin-bottom: 40px;
+//   }
+// }
+
 .profile-container {
   width: 400px;
   .auth-form-button {
