--- a/app/assets/stylesheets/components/splash/_.scss
+++ b/app/assets/stylesheets/components/splash/_.scss
@@ -1,20 +1,161 @@
+// .splash-container {
+//   height: 100%;
+//   width: 100%;
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: center;
+//   align-items: center;
+//   // background: $lt-primary;
+// }
+
+// .splash-top {
+//   height: 327px;
+//   width: 100%;
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: center;
+//   align-items: center;
+//   // background: white;
+//   // box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+
+//   span {
+//     // margin-left: 100px;
+//     // opacity: 0;
+//     font-weight: bold;
+//   }
+
+//   h1 {
+//     font-size: 40px;
+//     opacity: 1;
+//     margin-bottom: 25px;
+//     font-weight: bold;
+//   }
+
+//   p {
+//     text-align: center;
+//     font-size: 20px;
+//     line-height: 35px;
+//   }
+// }
+
+// .splash-mid {
+//   height: 327px;
+//   width: 100%;
+//   padding: 40px 0px;
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: space-around;
+//   align-items: center;
+//   background: $drk-primary;
+
+//   h1 {
+//     font-size: 30px;
+//     color: white;
+//     font-weight: bold;
+//   }
+
+//   p {
+//     text-align: center;
+//     font-size: 20px;
+//     line-height: 45px;
+//     color: white;
+//   }
+
+//   .splash-mid-carousel {
+//     padding: 20px 20px;
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+
+//     div[class^='logo-'] {
+//       margin: 0px 10px;
+//       height: 90px;
+//       width: 80px;
+//       border: none;
+//       border-radius: 25%;
+//     }
+//   }
+// }
+
+// .splash-bottom {
+//   // height: 327px;
+//   width: 100%;
+//   padding: 40px 0px;
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: center;
+//   align-items: center;
+//   // background: white;
+//   // box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+
+//   h1 {
+//     font-size: 30px;
+//     margin-bottom: 25px;
+//     font-weight: bold;
+//   }
+//   p {
+//     text-align: center;
+//     font-size: 20px;
+//     line-height: 45px;
+//   }
+// }
+
+// .splash-teaser {
+//   width: 100%;
+//   padding: 40px 0px;
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: center;
+//   align-items: center;
+//   background: $drk-primary;
+//   color: white;
+//   h1 {
+//     font-size: 30px;
+//     margin-bottom: 25px;
+//     font-weight: bold;
+//   }
+//   p {
+//     text-align: center;
+//     font-size: 20px;
+//     line-height: 45px;
+//   }
+// }
+
 .splash-container {
   height: 100%;
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   // background: $lt-primary;
 }
 
 .splash-top {
   height: 327px;
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   // background: white;
   // box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 
@@ -42,10 +183,18 @@
   height: 327px;
   width: 100%;
   padding: 40px 0px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   background: $drk-primary;
 
   h1 {
@@ -63,9 +212,15 @@
 
   .splash-mid-carousel {
     padding: 20px 20px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 
     div[class^='logo-'] {
       margin: 0px 10px;
@@ -81,10 +236,19 @@
   // height: 327px;
   width: 100%;
   padding: 40px 0px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   // background: white;
   // box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 
@@ -103,10 +267,19 @@
 .splash-teaser {
   width: 100%;
   padding: 40px 0px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   background: $drk-primary;
   color: white;
   h1 {
